- Removed Ratings from Cosmetic Surgery, replaced with variable cost.
- Added RatingLabel to Fiberoptic Hair and Telescoping Limbs. 
- Fixed an issue with the Point Priority Chargen customdata file causing metahumans to be unavailable.
- Added missing Device Ratings to the RG Pi-Tacs.
- Added missing minimum rating on Reaction Enhancers, courtesy of JoshuarTree.

New Strings:
- Label_MetagenicKarmaValue
- Label_MetagenicKarmaValueAppend
- Label_SummaryMetagenicQualities
- Rating_Meters
- Rating_LengthInCmBy10
- Label_RatingFormat

- Changed Strings:
- Message_OverPositiveMetagenicQualities
- Message_OverNegativeMetagenicQualities
- Message_MetagenicQualitiesUnbalanced
- Message_MetagenicQualitiesInsufficientKarma
- Message_MetagenicQualitiesSubtractingKarma
- Checkbox_SelectQuality_Metagenic
- Checkbox_SelectQuality_Not_Metagenic

Build 208

Application Changes:

- Added a genetechessmultiplier improvement type that allows for the modification of genetech essence costs in a similar manner to the biowareessmultiplier improvement.
- Added an exclusion to gameplayoptions.xml that allows for the customisation of the limbs that are permitted for Redliner and Cyber Singularity Seeker. Closes #1168
- Weapons mounted on vehicles in create mode can now switch the dicepool calculation method they use between character skill, remote-operated gunnery and dogbrain, among others. Closes #3801
- Added a validity check for Adepts to ensure that they're not over their powerpoint maximum when moving into career mode.
- Added a house rule to allow Improved Ability's maximum to be 1.5 of skill rating instead of 0.5.

Application Fixes:

- Fixed issues with the SelectSpell improvement not being properly available in the improvements window.