@@ -1776,7 +1776,7 @@
         </knowledgeskilllevel>
         <freepositivequalities>5</freepositivequalities>
         <addqualities>
-          <addquality>Rank</addquality>
+          <addquality>Rank (Neither Military nor Law Enforcement) I</addquality>
           <addquality>Code of Honor</addquality>
         </addqualities>
       </bonus>
@@ -2624,6 +2624,9 @@
       <name>Military Academy</name>
       <karma>115</karma>
       <bonus>
+        <addqualities>
+          <addquality>Rank (Military or Law Enforcement) I</addquality>
+        </addqualities>
         <attributelevel>
           <name>BOD</name>
         </attributelevel>
